--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon  -r dotenv/config app.js dotenv_config_path=./config/.env "
+    "dev": "nodemon --es-module-specifier-resolution=node -r dotenv/config app.js dotenv_config_path=./config/.env "
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "escape-string-regexp": "^4.0.0",
@@ -18,6 +19,7 @@
     "validator": "^13.5.2"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6"
   }
 }
