--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Gerenciador de tarefas - api com autenticação de usuário ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --es-module-specifier-resolution=node -r dotenv/config app.js dotenv_config_path=./config/.env "
+    "dev": "nodemon --es-module-specifier-resolution=node -r dotenv/config server.js dotenv_config_path=./config/.env ",
+    "test": "node  --experimental-vm-modules  node_modules/jest/bin/jest.js  "
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-node",
+    "transform": {}
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +24,7 @@
   },
   "devDependencies": {
     "jest": "^26.6.3",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.1"
   }
 }
