--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Gerenciador de tarefas - api com autenticação de usuário ",
   "main": "app.js",
   "scripts": {
-    "start": "node --es-module-specifier-resolution=node -r server.js",
-    "dev": "nodemon --es-module-specifier-resolution=node -r dotenv/config server.js dotenv_config_path=./config/.env ",
+    "start": "node --es-module-specifier-resolution=node ./server.js",
+    "dev": "nodemon --es-module-specifier-resolution=node -r dotenv/config ./server.js dotenv_config_path=./config/.env ",
     "test": "node  --experimental-vm-modules  node_modules/jest/bin/jest.js  "
   },
   "jest": {
