--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "validator": "^13.5.2"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1"
